<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="za.ac.cput.cputcourses.views.ViewSubjectActivity">

    <TextView android:text="@string/view_subject" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/view_subject"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/view_subject_code"
        android:id="@+id/view_subject_code"
        android:layout_marginTop="89dp"
        android:layout_below="@+id/view_subject"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/view_subject"
        android:layout_toStartOf="@+id/view_subject"
        android:paddingTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_input_subject_code"
        android:inputType="textShortMessage"
        android:hint="@string/subject_code_hint"
        android:layout_alignTop="@+id/view_subject_code"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="39dp"
        android:layout_marginEnd="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/view_subject_name"
        android:id="@+id/view_subject_name"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_input_subject_name"
        android:layout_alignTop="@+id/view_subject_name"
        android:layout_alignRight="@+id/view_input_subject_code"
        android:layout_alignEnd="@+id/view_input_subject_code"
        android:hint="@string/subject_name_hint"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/edit_button"
        android:clickable="false"
        android:visibility="visible"
        android:layout_alignTop="@+id/delete_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/delete_button"
        android:layout_below="@+id/view_input_subject_name"
        android:layout_alignRight="@+id/view_input_subject_name"
        android:layout_alignEnd="@+id/view_input_subject_name"
        android:layout_marginTop="56dp" />

</RelativeLayout>